--- a/index.html
+++ b/index.html
@@ -8,5 +8,25 @@
 </head>
 <body>
     <p>MANEJO DE TEXTO</p>
+    <h1>Titulo</h1>
+    <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Beatae temporibus, nisi repellendus rem dolorem, ab quaerat itaque, totam voluptatum ipsa ad necessitatibus. Culpa tenetur labore, nulla molestiae enim pariatur magnam!</p>
+    <p>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Illum quos blanditiis ab dolore hic asperiores magnam ratione, sequi impedit! Deserunt excepturi, sunt explicabo quis ratione voluptatibus eligendi facere est cumque!</p>
+    <h2>Titulo</h2>
+    <h3>Titulo</h3>
+    <h4>Titulo</h4>
+    <h5>Titulo</h5>
+    <div>HOLA MUNDO</div>
+    <br>
+    <br>
+    <div>ADIOS MUNDO</div>
+    <p>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Itaque, corporis eligendi facilis blanditiis vero doloremque minus inventore repellat voluptas deleniti sint illo non, consequuntur impedit provident quas ipsa mollitia tenetur!</p>
+    <hr>
+    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Excepturi placeat, voluptatibus sed soluta ipsum quam facilis aliquid minima maiores atque aliquam incidunt recusandae ex ad dicta veritatis reprehenderit! Placeat, debitis.</p>
+    <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Necessitatibus quasi culpa delectus amet porro quam est repudiandae doloribus! Eos nemo laudantium molestias aperiam vel minima recusandae commodi dicta accusamus sit?</p>
+    <wbr>
+    <h1>sup</h1>
+    <div> 5<sup>2</sup> </div>
+    <h1>SUB</h1>
+    <p>el mejor amigo de un programador es: <br> C<sub>8</sub>H<sub>10</sub>N<sub>4</sub>O<sub>2</sub> mejor conocido como Cafeina</p>
 </body>
 </html>
