--- a/index.html
+++ b/index.html
@@ -5,6 +5,11 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
+    <style>
+        table th, table td{
+            border: 1px solid green;
+        }
+    </style>
 </head>
 <body>
     <p>MANEJO DE TEXTO</p>
@@ -28,5 +33,43 @@
     <div> 5<sup>2</sup> </div>
     <h1>SUB</h1>
     <p>el mejor amigo de un programador es: <br> C<sub>8</sub>H<sub>10</sub>N<sub>4</sub>O<sub>2</sub> mejor conocido como Cafeina</p>
+    <h1>STRONG</h1>
+    <strong>NUNCA LE DES DE COMER DESPUES DE MEDIA NOCHE</strong>
+    <br>
+    <h1>em</h1>
+    <em>A mi me gusta tu comida</em>
+    <h1>mark</h1>
+    <mark>este texto debe estar resaltado</mark>
+    <h1>q</h1>
+    <div>carlitos dijo: <em>"hoy no podre salir"</em></div>
+    <h1>abbr</h1>
+    <div>puedes usar <abbr>CSS</abbr> para darle estilo a tu <abbr>HTML</abbr></div>
+    <h1>TABLAS IMAGENES Y ENLACES</h1> <br>
+    <table>
+        <caption>Redndimiento de los Estudiantes</caption>
+        <thead>
+            <tr>
+                <th scope="col" colspan="1" rowspan="2" >Nombre</th>
+                <th scope="col" colspan="2" rowspan="1" >A</th>
+            </tr>
+            <tr>
+                <th scope="col" colspan="1" rowspan="1">B</th>
+                <th scope="col" colspan="1" rowspan="1">C</th>
+            </tr>
+        </thead>
+        <tbody>
+            <tr>
+                <td>Jaime</td>
+                <td>Sistemas</td>
+                <td>Muy Pobre</td>
+            </tr>
+            <tr>
+                <td>Fabio</td>
+                <td>Sistemas</td>
+                <td>Regular</td>
+            </tr>
+        </tbody>
+        <tfoot></tfoot>
+    </table>
 </body>
 </html>
