--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>Manejo de texto</title>
     <style>
         table th, table td{
             border: 1px solid green;
@@ -71,5 +71,64 @@
         </tbody>
         <tfoot></tfoot>
     </table>
+    <table>
+        <caption>Tabla 2</caption>
+        <thead>
+            <tr>
+                <th scope="col" colspan="2">A</th>
+                <th scope="col" colspan="2">D</th>
+            </tr>
+            <tr>
+                <th scope="col">B</th>
+                <th scope="col">C</th>
+                <th scope="col">E</th>
+                <th scope="col">F</th>
+            </tr>
+        </thead>
+        <tbody>
+            <tr>
+                <td rowspan="2">D1</td>
+                <td>D2</td>
+                <td rowspan="2">D4</td>
+                <td>D5</td>
+            </tr>
+            <tr>
+                <td>D3</td>
+                <td>D6</td>
+            </tr>
+            <tr>
+                <td rowspan="2">D7</td>
+                <td>D8</td>
+                <td rowspan="2">D10</td>
+                <td>D11</td>
+            </tr>
+            <tr>
+                <td>D9</td>
+                <td>D12</td>
+            </tr>
+        </tbody>
+        <tfoot>
+            <tr>
+                <td colspan="3">TOTAL</td>
+                <td>100</td>
+            </tr>
+        </tfoot>
+    </table>
+    <a href="paginas/contacto.html">CONTACTO</a>
+    <br>
+    <a href="paginas/test.html" target="_blank">Test</a>
+    <br>
+
+    <a href="#ultimo" id="arriba">Ir al final</a>
+    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Illum odit repellat sequi nobis dicta laborum rerum optio hic itaque, quae ipsa provident et inventore, labore officiis temporibus voluptas quisquam tempora?</p>
+    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Illum odit repellat sequi nobis dicta laborum rerum optio hic itaque, quae ipsa provident et inventore, labore officiis temporibus voluptas quisquam tempora?</p>
+    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Illum odit repellat sequi nobis dicta laborum rerum optio hic itaque, quae ipsa provident et inventore, labore officiis temporibus voluptas quisquam tempora?</p>
+    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Illum odit repellat sequi nobis dicta laborum rerum optio hic itaque, quae ipsa provident et inventore, labore officiis temporibus voluptas quisquam tempora?</p>
+    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Illum odit repellat sequi nobis dicta laborum rerum optio hic itaque, quae ipsa provident et inventore, labore officiis temporibus voluptas quisquam tempora?</p>
+    <p id="ultimo">Ultiomo parrafo</p>
+    <a href="#arriba">Subir</a>
+    <br>
+    <a href="mailto:osber.rioja@ucb.edu.bo">Puedes Escribirme</a> <br>
+    <a href="tel: +591(769)05443">llamar</a> <br>
 </body>
 </html>
